--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -48,20 +48,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why is this project of interest to your group?<br>\n",
+    "### Why is this project of interest to your group?<br>\n",
     "&emsp;The pandemic has claimed many lives, but its impact on the US goes beyond that. People of limited financial means have been disproportionately affected by the stay-at-home orders issued. In light of this, we believe it’s important to consider how the pandemic, and the stay-at-home orders issued, affect people’s livelihoods and access to food.\n",
     " \n",
-    "What background information led to your hypothesis?<br>\n",
+    "### What background information led to your hypothesis?<br>\n",
     "&emsp;Certain communities in the greater San Diego area had suffered from food insecurity prior to the advent of this pandemic. According to an article on Fortune magazine, since the beginning of the pandemic, unemployment has skyrocketed from 4% to nearly 18%. Another article by Fortune, published 04/09/2020, states that “The total weekly claims fell close to 1.4 million from last week's 6.6 million initial unemployment claims.” Furthermore, according to an article published on yahoo! finance, “Economists had been expecting the report to show the ranks of jobless Americans increasing by 5.5 million.” Meanwhile, information made available by the USDA indicates that food production has been decreasing as a result of the pandemic. Consequently, food banks are reporting an unprecedented increase in demand, and the possibility of the US facing a food crisis is real.\n",
     " \n",
-    "Why is this important?<br>\n",
+    "### Why is this important?<br>\n",
     "&emsp;We believe that this pandemic’s impact on the US goes beyond the lives it has claimed. The advent of the pandemic has resulted in stay-at-home orders which have increased the number of jobless Americans, limiting their financial resources and thus their ability to secure basic necessities, such as food. An analysis of the pandemic’s effect on the public’s access to food could result in a better understanding of the area’s food supply chain, which could be used by decision-makers and other relevant stakeholders to alleviate current shortages, and perhaps to prevent other shortages from occurring in the future.\n",
     " \n",
-    "What has already been done on this topic? What is already known?<br>\n",
+    "### What has already been done on this topic? What is already known?<br>\n",
     "&emsp;COVID-19 is a respiratory virus that is highly contagious and has infected well over 210 countries around the world, resulting in an on-going global pandemic. In order to curtail the spread of the disease, many governments have issued strict stay-at-home directives. These directives have resulted in the closure of businesses and increased unemployment. \n",
     "&emsp;There have been studies and visualizations done in many countries worldwide highlighting spots where food insecurity is prevalent. These studies demonstrate that COVID-19 has only aggravated food insecurity, especially in countries where food insecurity was already prevalent.\n",
     " \n",
-    "References (include links):\n",
+    "### References (include links):\n",
     "1. San Diego Hunger Coalition\n",
     "(https://www.sandiegohungercoalition.org/research)\n",
     "\n",
