--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -62,9 +62,7 @@
     "&emsp;There have been studies and visualizations done in many countries worldwide highlighting spots where food insecurity is prevalent. These studies demonstrate that COVID-19 has only aggravated food insecurity, especially in countries where food insecurity was already prevalent.\n",
     " \n",
     "### References (include links):\n",
-    "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
-    "(https://www.sandiegohungercoalition.org/research)\n",
-    "\n",
+    "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n", "\n",
     "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
     "(https://ucsdcommunityhealth.org)\n",
     "\n",
