--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -63,9 +63,8 @@
     " \n",
     "### References (include links):\n",
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
-    "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n","\n",
-    "3. Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households (https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households)\n",
-    "\n",
+    "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
+    "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \n",
     "4. Food Security Information Network \n",
     "(https://www.fsinplatform.org)\n",
     "\n",
