--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -71,16 +71,11 @@
     "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
     "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
     "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
-    "10. ['A perfect storm': US facing hunger crisis as demand for food banks soars] (https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
-    "11. Jobless claims: Another 5.245 million Americans file for unemployment benefits https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html \n",
-    "\n",
-    "12. 22 million have lost their jobs over the past month—real unemployment rate likely nearing 18% https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/\n",
-    "\n",
-    "13. Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl\n",
-    "http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C\n",
-    "\n",
-    "14. COVID-19 \n",
-    "https://covid19.ca.gov/\n"
+    "10. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
+    "11. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
+    "12. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
+    "13. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
+    "14. [COVID-19](https://covid19.ca.gov/)\n"
    ]
   },
   {
