--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -148,7 +148,25 @@
     "- Feel free to reach out for help when needed without any hesitation; we are a team and will try to lift each other up when we can\n",
     "- Search for common ground, look for consensus.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Timeline Proposal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+    | Meeting Date | Meeting Time | Completed Before Meeting | Discuss at Meeting|
+    | :---         |    :----:    |          :---:           |        ---:       |
+    | Header       | Title        |         Here is this     |                   |
+    | Paragraph    | Text         | And more                 |                   |
+
+   ]
   }
+  
  ],
  "metadata": {
   "kernelspec": {
