--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -148,6 +148,24 @@
     "- Feel free to reach out for help when needed without any hesitation; we are a team and will try to lift each other up when we can\n",
     "- Search for common ground, look for consensus.\n"
    ]
+  },
+    {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Timeline Proposal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+| Tables        | Are           | Cool  |
+| ------------- |:-------------:| -----:|
+| col 3 is      | right-aligned | $1600 |
+| col 2 is      | centered      |   $12 |
+| zebra stripes | are neat      |    $1 |
+   ]
   }
  ],
  "metadata": {
