--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -160,11 +160,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
+"| Tables        | Are           | Cool  |"
+"| ------------- |:-------------:| -----:|"
+"| col 3 is      | right-aligned | $1600 |"
+"| col 2 is      | centered      |   $12 |"
+"| zebra stripes | are neat      |    $1 |"
    ]
   }
  ],
