--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -160,10 +160,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    | First Header  | Second Header |
-    | ------------- | ------------- |
-    | Content Cell  | Content Cell  |
-    | Content Cell  | Content Cell  |
+   "-04/02 12:30PM: Formed team, discussed project ideas
+   "-04/07 2:00PM: Collected background material on topic, discussed ideal dataset(s) and ethics, drafted project proposal
+   "-04/16 2:00PM: Found more sources, draft proposal, editted project proposal
+   "-04/21 2:00PM: Completed project proposal, began collecting and formatting data
+   "-04/28 2:00PM: Finish finessing the data, begin working on visualizations.
+   "-05/05 2:00PM: Begin drafting final submission
    ]
   }
  ],
