--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -63,6 +63,15 @@
     "&emsp;There have been studies and visualizations done in many countries worldwide highlighting spots where food insecurity is prevalent. These studies demonstrate that COVID-19 has only aggravated food insecurity, especially in countries where food insecurity was already prevalent.\n",
     " \n",
     "### References (include links):\n",
+    
+    "1. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
+    "2. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
+    "3. [Real unemployment in the United States has likely hit 14.7%, the highest level since 1940](https://fortune.com/2020/04/09/ureal-unemployment-rate-jobless-claims-this-week/)
+    "4. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
+    "5. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
+    "6. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
+
+    
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
     "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
     "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \n",
