--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -62,7 +62,23 @@
     "\n",
     "&emsp;There have been studies and visualizations done in many countries worldwide highlighting spots where food insecurity is prevalent. These studies demonstrate that COVID-19 has only aggravated food insecurity, especially in countries where food insecurity was already prevalent.\n",
     " \n",
+    
     "### References (include links):\n",
+    "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
+    "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
+    "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \n",
+    "4. [Food Security Information Network](https://www.fsinplatform.org)\n",
+    "5. [Feeding San Diego](https://give.feedingsandiego.org/give/276805/?gclid=EAIaIQobChMIxpXxttfj6AIVQRx9Ch1mVwQhEAAYASAAEgIsovD_BwE#!/donation/checkout)\n",
+    "6. [Neighborhood distribution Program](https://sandiegofoodbank.org/programs/neighborhood-distribution-program/)\n",
+    "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
+    "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
+    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
+    "10. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
+    "11. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
+    "12. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
+    "13. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
+    "14. [COVID-19](https://covid19.ca.gov/)\n"
+
     ]
   },
   {
