--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -64,6 +64,9 @@
     " \n",
     
     "### References (include links):\n",
+    
+    "1. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
+    
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
     "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
     "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \n",
