--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -66,6 +66,8 @@
     "### References (include links):\n",
     
     "1. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
+    "2. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
+    "3. [Real unemployment in the United States has likely hit 14.7%, the highest level since 1940](https://fortune.com/2020/04/09/ureal-unemployment-rate-jobless-claims-this-week/)\n",
     
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
     "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
