--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -58,7 +58,7 @@
     "&emsp;We believe that this pandemic’s impact on the US goes beyond the lives it has claimed. The advent of the pandemic has resulted in stay-at-home orders which have increased the number of jobless Americans, limiting their financial resources and thus their ability to secure basic necessities, such as food. An analysis of the pandemic’s effect on the public’s access to food could result in a better understanding of the area’s food supply chain, which could be used by decision-makers and other relevant stakeholders to alleviate current shortages, and perhaps to prevent other shortages from occurring in the future.\n",
     " \n",
     "### What has already been done on this topic? What is already known?<br>\n",
-    "&emsp;COVID-19 is a respiratory virus that is highly contagious and has infected well over 210 countries around the world, resulting in an on-going global pandemic. In order to curtail the spread of the disease, many governments have issued strict stay-at-home directives. These directives have resulted in the closure of businesses and increased unemployment. \n", 
+    "&emsp;[COVID-19](https://covid19.ca.gov/)<sup>7</sup> is a respiratory virus that is highly contagious and has infected well over 210 countries around the world, resulting in an on-going global pandemic. In order to curtail the spread of the disease, many governments have issued strict stay-at-home directives. These directives have resulted in the closure of businesses and increased unemployment. \n", 
     "\n",
     "&emsp;There have been studies and visualizations done in many countries worldwide highlighting spots where food insecurity is prevalent. These studies demonstrate that COVID-19 has only aggravated food insecurity, especially in countries where food insecurity was already prevalent.\n",
     " \n",
@@ -68,7 +68,12 @@
     "1. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
     "2. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
     "3. [Real unemployment in the United States has likely hit 14.7%, the highest level since 1940](https://fortune.com/2020/04/09/ureal-unemployment-rate-jobless-claims-this-week/)\n",
-    
+    "4. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
+    "5. [USDA - Quick Stats](https://quickstats.nass.usda.gov)\n"
+    "6. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
+    "7. [COVID-19](https://covid19.ca.gov/)\n"
+
+    "### Additional sources:\n",
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
     "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
     "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \n",
@@ -78,12 +83,6 @@
     "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
     "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
     "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
-    "10. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
-    "11. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
-    "12. [22 million have lost their jobs over the past month—real unemployment rate likely nearing 18%](https://fortune.com/2020/04/16/us-unemployment-rate-numbers-claims-this-week-total/)\n",
-    "13. [Food deserts and access to fresh food in low-income San Diego / by Emily Theresa Puhl](http://roger.ucsd.edu/search~S9?/Xfood+++san+diego&searchscope=9&SORT=D/Xfood+++san+diego&searchscope=9&SORT=D&SUBKEY=food+++san+diego/1%2C4626%2C4626%2CE/frameset&FF=Xfood+++san+diego&searchscope=9&SORT=D&12%2C12%2C)\n",
-    "14. [COVID-19](https://covid19.ca.gov/)\n"
-
     ]
   },
   {
