--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -71,7 +71,7 @@
     "4. [Jobless claims: Another 5.245 million Americans file for unemployment benefits](https://finance.yahoo.com/news/coronavirus-covid-weekly-initial-jobless-claims-april-11-192401571.html)\n",
     "5. [USDA - Quick Stats](https://quickstats.nass.usda.gov)\n"
     "6. [A perfect storm: US facing hunger crisis as demand for food banks soars](https://www.theguardian.com/environment/2020/apr/02/us-food-banks-coronavirus-demand-unemployment)\n",
-    "7. [COVID-19](https://covid19.ca.gov/)\n"
+    "7. [COVID-19](https://covid19.ca.gov/)\n",
 
     "### Additional sources:\n",
     "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
@@ -82,7 +82,7 @@
     "6. [Neighborhood distribution Program](https://sandiegofoodbank.org/programs/neighborhood-distribution-program/)\n",
     "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
     "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
-    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
+    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n"
     ]
   },
   {
