--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -81,7 +81,8 @@
     "6. [Neighborhood distribution Program](https://sandiegofoodbank.org/programs/neighborhood-distribution-program/)\n",
     "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
     "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
-    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n"
+    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
+    "10. [Nutritional Goals for Age-Sex Groups Based on Dietary Reference Intakes and Dietary Guidelines Recommendations](https://health.gov/our-work/food-nutrition/2015-2020-dietary-guidelines/guidelines/appendix-7/)\n"
     ]
   },
   {
@@ -95,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outbreak of COVID-19 has negatively impacted individuals’ access to food, disproportionately affecting the financially insecure and communities of color. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so."
+    "The outbreak of COVID-19 has negatively impacted individuals’ ability to access food and meet their nutritional requirements, as outlined by the [US Department of Health and Human Services](https://health.gov/our-work/food-nutrition/2015-2020-dietary-guidelines/guidelines/appendix-7/)<sup>10</sup>. In that respect, the outbreak has disproportionately affected the financially insecure and communities of color; these groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so."
    ]
   },
   {
