--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Data regarding the number of food-insecure people in the greater San Diego area, preferably given as a geographic distribution.\n",
+    "- Data regarding the number of food-insecure people in the greater San Diego area given as a geographic distribution.\n",
     "- Demographic information about the population of the greater San Diego area from the most recent US census.\n",
     "- Data about local food-banks’ stock, and the number of people making use of their services, stretching back to April 2019.\n",
     "- Data about consumer habits and sales volume at grocery chains such as Vons, and Trader Joe’s by day, stretching back to April 2019.\n",
