Update  ProjectProposal Group05

--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -115,6 +115,7 @@
     "- Data about local food-banks’ stock, and the number of people making use of their services, stretching back to April 2019.\n",
     "- Data about consumer habits and sales volume at grocery chains such as Vons, and Trader Joe’s by day, stretching back to April 2019.\n",
     "- Data about the number of daily users and sales volumes for online food ordering apps such as Uber Eats, DoorDash, etc.. by day, stretching back to April 2019\n"
+   "- Different dataset for each ethinicity group in the greater San Diego area. The dataset will have months from April 2019 as rows and total population, food insecure population, consumer habits, number of people making use of local food-banks, daily users and sales volume of online food ordering apps as columns.\n"
    ]
   },
   {
@@ -167,12 +168,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "- 04/02 12:30PM: Formed team, discussed project ideas\n",
-   "- 04/07 2:00PM: Collected background material on topic, discussed ideal dataset(s) and ethics, drafted project proposal\n",
-   "- 04/16 2:00PM: Found more sources, draft proposal, editted project proposal\n",
-   "- 04/21 2:00PM: Completed project proposal, began collecting and formatting data\n",
-   "- 04/28 2:00PM: Finish finessing the data, begin working on visualizations.\n",
-   "- 05/05 2:00PM: Begin drafting final submission\n"
+   "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
+    "|---|---|---|---|\n",
+    "| 04/20  |  12:30 PM |  Formed team, discussed project ideas  | Discuss project ideas | \n",
+    "| 04/07  |  2:00 PM |  Collected background material on topic, discussed ideal dataset(s) and ethics, drafted project proposal | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "| 04/16  | 2:00 PM  | Found more sources, draft proposal, editted project proposal  |    |\n",
+    "| 04/21  | 2:00 PM  | Completed project proposal, began collecting and formatting data |   |\n",
+    "| 04/28  | 2:00 PM  | Finish finessing the data, begin working on visualizations. |  |\n",
+    "| 05/05  | 2:00 PM  | Begin drafting final submission)|  |\n",
+    "| 05/10  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |\n"
    ]
   }
  ],
