--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -168,15 +168,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "|---|---|---|---|\n",
-    "| 04/20  |  12:30 PM |  Formed team, discussed project ideas  | Discuss project ideas | \n",
-    "| 04/07  |  2:00 PM |  Collected background material on topic, discussed ideal dataset(s) and ethics, drafted project proposal | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 04/16  | 2:00 PM  | Found more sources, draft proposal, editted project proposal  |    |\n",
-    "| 04/21  | 2:00 PM  | Completed project proposal, began collecting and formatting data |   |\n",
-    "| 04/28  | 2:00 PM  | Finish finessing the data, begin working on visualizations. |  |\n",
-    "| 05/05  | 2:00 PM  | Begin drafting final submission)|  |\n",
-    "| 05/10  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |\n"
+   "- 04/02 12:30PM: Formed team, discussed project ideas\n",
+   "- 04/07 2:00PM: Collected background material on topic, discussed ideal dataset(s) and ethics, drafted project proposal\n",
+   "- 04/16 2:00PM: Found more sources, draft proposal, editted project proposal\n",
+   "- 04/21 2:00PM: Completed project proposal, began collecting and formatting data\n",
+   "- 04/28 2:00PM: Finish finessing the data, begin working on visualizations.\n",
+   "- 05/05 2:00PM: Begin drafting final submission\n"
    ]
   }
  ],
