--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -72,16 +72,16 @@
     "7. [COVID-19](https://covid19.ca.gov/)\\n\n",
     "\n",
     "### Additional sources: \n",
-    "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\\n\n",
-    "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \\n\n",
-    "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households) \\n\",\n",
-    "4. [Food Security Information Network](https://www.fsinplatform.org)\\n\n",
-    "5. [Feeding San Diego](https://give.feedingsandiego.org/give/276805/?gclid=EAIaIQobChMIxpXxttfj6AIVQRx9Ch1mVwQhEAAYASAAEgIsovD_BwE#!/donation/checkout)\\n\n",
-    "6. [Neighborhood distribution Program](https://sandiegofoodbank.org/programs/neighborhood-distribution-program/)\\n\n",
-    "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\\n\n",
-    "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\\n\n",
-    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\\n\n",
-    "10. [Nutritional Goals for Age-Sex Groups Based on Dietary Reference Intakes and Dietary Guidelines Recommendations](https://health.gov/our-work/food-nutrition/2015-2020-dietary-guidelines/guidelines/appendix-7/)\\n"
+    "1. [San Diego Hunger Coalition](https://www.sandiegohungercoalition.org/research)\n",
+    "2. [UCSD Community Health](https://ucsdcommunityhealth.org) \n",
+    "3. [Foods Typically Purchased by Supplemental Nutrition Assistance Program (SNAP) Households](https://www.fns.usda.gov/snap/foods-typically-purchased-supplemental-nutrition-assistance-program-snap-households)\n",
+    "4. [Food Security Information Network](https://www.fsinplatform.org)\n",
+    "5. [Feeding San Diego](https://give.feedingsandiego.org/give/276805/?gclid=EAIaIQobChMIxpXxttfj6AIVQRx9Ch1mVwQhEAAYASAAEgIsovD_BwE#!/donation/checkout)\n",
+    "6. [Neighborhood distribution Program](https://sandiegofoodbank.org/programs/neighborhood-distribution-program/)\n",
+    "7. [Food assistance during COVID-19 Pandemic](https://www.sandiegouniontribune.com/north-county-community-news/story/2020-04-01/where-to-get-food-supplies-during-the-covid-19-pandemic)\n",
+    "8. [Greater Pittsburgh Community Foodbank - Our response to COVID-19](https://www.pittsburghfoodbank.org/2020/03/12/coronavirus/)\n",
+    "9. [USDA - Coronavirus Disease](https://www.usda.gov/coronavirus)\n",
+    "10. [Nutritional Goals for Age-Sex Groups Based on Dietary Reference Intakes and Dietary Guidelines Recommendations](https://health.gov/our-work/food-nutrition/2015-2020-dietary-guidelines/guidelines/appendix-7/)\n"
    ]
   },
   {
