--- a/ProjectProposal_group05.ipynb
+++ b/ProjectProposal_group05.ipynb
@@ -114,7 +114,7 @@
     "- Data about local food-banks’ stock, and the number of people making use of their services, stretching back to April 2019.\n",
     "- Data about consumer habits and sales volume at grocery chains such as Vons, and Trader Joe’s by day, stretching back to April 2019.\n",
     "- Data about the number of daily users and sales volumes for online food ordering apps such as Uber Eats, DoorDash, etc.. by day, stretching back to April 2019.\n",
-    "- Different dataset for each ethinicity group in the greater San Diego area. The dataset will have months from April 2019 as rows and total population, food insecure population, consumer habits, number of people making use of local food-banks, daily users and sales volume of online food ordering apps as columns."
+    "All in all, we would like different datasets for each ethinicity group in the greater San Diego area. The data should be organized month-by-month from April 2019 as rows and total population, food insecure population, consumer habits, number of people making use of local food-banks, daily users and sales volume of online food ordering apps as columns."
    ]
   },
   {
