Updated Research Question and Hypothesis

--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -72,7 +72,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How has the outbreak of COVID-19 affected food security in communities in the greater San Diego area?"
+    "How has the outbreak of COVID-19 affected food security in communities in the greater San Diego area?\n",
+    "\n",
+    "Updated: How has the outbreak of COVID-19 affected food bank distribution by community in the greater San Diego area?\n",
+    "\n",
+    "__Wants more specific \"food security\", answered with food bank distribution.__"
    ]
   },
   {
@@ -131,7 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outbreak of COVID-19 has negatively impacted individuals’ access to food, disproportionately affecting the financially insecure and communities of color. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so.\n"
+    "The outbreak of COVID-19 has negatively impacted individuals’ access to food, disproportionately affecting the financially insecure and communities of color. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so.\n",
+    "\n",
+    "Update: The outbreak of COVID-19 has negatively impacted individual's access to food, disproportionately affecting the financially insecure and communities of color through analysis of food distribution by zip code, income by zip, and ethnicities by zip. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so."
    ]
   },
   {
@@ -213,6 +219,28 @@
     "fig, ax = plt.subplots(1, 1, figsize=(17, 7))\n",
     "divider = make_axes_locatable(ax)\n",
     "sdmap.plot(column='POPULATION', ax=ax, cmap='GnBu', legend=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop2 = pd.read_excel(\"Majority Ethnicities by Zip Code.xlsx\")\n",
+    "sdmap= pd.merge(tempmap, pop2, on='ZIP', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Majority Ethnicity by Zip code\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(17, 7))\n",
+    "divider = make_axes_locatable(ax)\n",
+    "sdmap.plot(column='Majority Ethnicity', ax=ax, cmap='GnBu', legend=True);"
    ]
   },
   {
@@ -511,11 +539,18 @@
     "\n",
     "Some of the relevant stakeholders are the people of greater San Diego, food producers and suppliers, the agricultural industry, the trucking industry, as well as local, state, and federal government. A model of how the epidemic affects communities in the greater San Diego area might factor into the government’s response to the epidemic, positively affecting underserved communities; and individuals' access to basic staples. Because the data we are looking at is exclusively about lower-income communities in San Diego, this is the only group we can generalize to with 100% certainty. Even then, our model might not be generalizable to the same population in future pandemics, due to the unique nature of this outbreak. Although we do not expect our model to be generalizable, if it were it could be used to assess other communities' vulnerabilities during future epidemics. It is also worth noting that if the model is not correct, it might result in decision-makers making decisions that adversely affect peoples’ access to food. \n",
     "\n",
-    "We expect there to be relative data available, and accessible. It is unclear if we would have enough data to make reliable inferences regarding how communities will continue to be affected by this epidemic in the future. In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
+    "\n",
+    "The data that we have contains information from food bank distributions, San Diego Regional GIS, and census data that displays populations by zip code in the greater San Diego area. In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
     "\n",
     "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor.\n",
     "\n",
-    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. "
+    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n",
+    "\n",
+    "\n",
+    "__Answered \"This section was a bit chaotic. It had lots of\n",
+    "info/ statements that didn't belong in a section on ethics/privacy, as\n",
+    "well as some sentences that I couldn't make sense of e.g. 'We expect\n",
+    "there to be relative data available, and accessible'.\" by specifying the datasets that we used from food bank distributions, San Diego GIS data, and population estimates by zip.__ \n"
    ]
   },
   {
