--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -547,6 +547,19 @@
     "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n",
     "\n",
     "\n",
+    "__Updated Ethics/Privacy:__\n",
+    "\n",
+    "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes food bank distributions, San Diego GIS data, and population estimates by zip code. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of the chosen population.\n",
+    "\n",
+    "Relevant stakeholders are the people of the greater San Diego area, food bank distributors, suppliers, as well as the local, state, and federal government. A model that could be helpful in responding to the epidemic and see the effects on communities might positively affect underserved communities and individuals' access to basic staples and food supplies. The data in which we have gives us information on median income by zip, ethnicities by zip, and food distribution by zip that can all display the areas and zip codes that rely on food banks the most. The certainty of our model will only be as accurate as the data we use, such as that no current accurate census information exists, only that of a 2018 population estimate released by SANDAG 2018 population estimates by Zip. \n",
+    "\n",
+    "The data that we have contains information from food bank distributions, San Diego Regional GIS, and census data that displays populations by zip code in the greater San Diego area. In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
+    "\n",
+    "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor.\n",
+    "\n",
+    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n",
+    "\n",
+    "\n",
     "__Answered \"This section was a bit chaotic. It had lots of\n",
     "info/ statements that didn't belong in a section on ethics/privacy, as\n",
     "well as some sentences that I couldn't make sense of e.g. 'We expect\n",
