Updated Research Question, Hypothesis, and ethics

--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -72,11 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How has the outbreak of COVID-19 affected food security in communities in the greater San Diego area?\n",
-    "\n",
-    "Updated: How has the outbreak of COVID-19 affected food bank distribution by community in the greater San Diego area?\n",
-    "\n",
-    "__Wants more specific \"food security\", answered with food bank distribution.__"
+    "How has the outbreak of COVID-19 affected food bank distribution by zip code, adjusted by population estimate in the greater San Diego area?\n"
    ]
   },
   {
@@ -135,9 +131,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outbreak of COVID-19 has negatively impacted individuals’ access to food, disproportionately affecting the financially insecure and communities of color. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so.\n",
+    "We predict that the outbreak of COVID-19 has negatively impacted individuals' access to food, disproportionately affecting the financially insecure and communities of color. This can be seen through the analysis of food distribution by zip code adjusted by population estimates.\n",
     "\n",
-    "Update: The outbreak of COVID-19 has negatively impacted individual's access to food, disproportionately affecting the financially insecure and communities of color through analysis of food distribution by zip code, income by zip, and ethnicities by zip. These groups were already limited in their ability to provide for themselves and their families, and the pandemic has only made it more difficult for them to do so."
+    "\n"
    ]
   },
   {
@@ -151,9 +147,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. San Diego Foodbank - Lbs of food distributed\n",
+    "1. San Diego Foodbank - Lbs of food distributed \n",
+    "*NUMBER OF OBSERVATIONS*\n",
     "2. SANDAG/SanGIS regional GIS data\n",
-    "3. SANDAG 2018 population estimates by Zip"
+    "*NUMBER OF OBSERVATIONS*\n",
+    "3. SANDAG 2018 population estimates by Zip\n",
+    "*NUMBER OF OBSERVATIONS*"
    ]
   },
   {
@@ -535,35 +534,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The question is well-posed and narrow enough in scope to be answerable. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of the chosen population.\n",
+    "__Update 2__\n",
     "\n",
-    "Some of the relevant stakeholders are the people of greater San Diego, food producers and suppliers, the agricultural industry, the trucking industry, as well as local, state, and federal government. A model of how the epidemic affects communities in the greater San Diego area might factor into the government’s response to the epidemic, positively affecting underserved communities; and individuals' access to basic staples. Because the data we are looking at is exclusively about lower-income communities in San Diego, this is the only group we can generalize to with 100% certainty. Even then, our model might not be generalizable to the same population in future pandemics, due to the unique nature of this outbreak. Although we do not expect our model to be generalizable, if it were it could be used to assess other communities' vulnerabilities during future epidemics. It is also worth noting that if the model is not correct, it might result in decision-makers making decisions that adversely affect peoples’ access to food. \n",
+    "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes San Diego Food Bank, San Diego GIS data, and population estimates by zip code which pose no concern for privacy due to their transparency to the public. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of each dataset. \n",
     "\n",
+    "Relevant stakeholders are the people of the greater San Diego area, food bank distributors, suppliers, as well as the local, state, and federal government. The data in which we have gives us information on median income by zip, ethnicities by zip, and food distribution by zip that can all display the areas and zip codes that rely on food bank distribution the most. \n",
     "\n",
-    "The data that we have contains information from food bank distributions, San Diego Regional GIS, and census data that displays populations by zip code in the greater San Diego area. In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
+    "In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
     "\n",
-    "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor.\n",
+    "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor. With the data being randomized, ethicial implications of research would arise through the limited datasets available which in turn could potentially skew food distribution in areas that require it most. \n",
     "\n",
-    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n",
-    "\n",
-    "\n",
-    "__Updated Ethics/Privacy:__\n",
-    "\n",
-    "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes food bank distributions, San Diego GIS data, and population estimates by zip code. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of the chosen population.\n",
-    "\n",
-    "Relevant stakeholders are the people of the greater San Diego area, food bank distributors, suppliers, as well as the local, state, and federal government. A model that could be helpful in responding to the epidemic and see the effects on communities might positively affect underserved communities and individuals' access to basic staples and food supplies. The data in which we have gives us information on median income by zip, ethnicities by zip, and food distribution by zip that can all display the areas and zip codes that rely on food banks the most. The certainty of our model will only be as accurate as the data we use, such as that no current accurate census information exists, only that of a 2018 population estimate released by SANDAG 2018 population estimates by Zip. \n",
-    "\n",
-    "The data that we have contains information from food bank distributions, San Diego Regional GIS, and census data that displays populations by zip code in the greater San Diego area. In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
-    "\n",
-    "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor.\n",
-    "\n",
-    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n",
-    "\n",
-    "\n",
-    "__Answered \"This section was a bit chaotic. It had lots of\n",
-    "info/ statements that didn't belong in a section on ethics/privacy, as\n",
-    "well as some sentences that I couldn't make sense of e.g. 'We expect\n",
-    "there to be relative data available, and accessible'.\" by specifying the datasets that we used from food bank distributions, San Diego GIS data, and population estimates by zip.__ \n"
+    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n"
    ]
   },
   {
@@ -577,7 +558,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your discussion information here*"
+    "*Fill in your discussion information here*\n",
+    "\n",
+    "*SUMMARIZE DATA AND QUESTION*\n",
+    "\n",
+    "*BRIEFLY DESCRIBE ANALYSIS*\n",
+    "\n",
+    "*INSERT RESULTS HERE*\n",
+    "\n",
+    "*INSERT LIMITATIONS HERE*\n",
+    "\n",
+    "*IMPACT ON SOCIETY*\n",
+    "\n",
+    "\n",
+    "- The only subsets we had that were examined were used because it was the only datasets that had the most consistent information ranging from 2019 to 2020. \n",
+    "- We could only find datasets that were estimates which did not contain the most accurate figures and numbers, such as the SANDAG population estimate from 2018. \n",
+    "\n"
    ]
   },
   {
