--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Update 2__\n",
+    "__Update__\n",
     "\n",
     "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes San Diego Food Bank, San Diego GIS data, and population estimates by zip code which pose no concern for privacy due to their transparency to the public. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of each dataset. \n",
     "\n",
@@ -568,11 +568,10 @@
     "\n",
     "*INSERT LIMITATIONS HERE*\n",
     "\n",
+    "A limitation would be the subsets we used. The only available subsets we had were examined because it had the most consistent information ranging from 2019 to 2020. We could only find datasets that were estimates which did not contain the most accurate figures and numbers, such as the SANDAG population estimate from 2018. \n",
+    "\n",
     "*IMPACT ON SOCIETY*\n",
     "\n",
-    "\n",
-    "- The only subsets we had that were examined were used because it was the only datasets that had the most consistent information ranging from 2019 to 2020. \n",
-    "- We could only find datasets that were estimates which did not contain the most accurate figures and numbers, such as the SANDAG population estimate from 2018. \n",
     "\n"
    ]
   },
